SoftServe: add Anchor Platform documentation on RPC API and Custody Server (#236)
