# api/anchor-platform/resources/sidebar.js
@@ -1,1 +1,1 @@
-module.exports = [{"type":"doc","id":"anchor-platform/resources/platform-api"},{"type":"category","label":"Transactions","link":{"type":"generated-index","title":"Transactions","slug":"/category/anchor-platform/resources/transactions"},"items":[{"type":"doc","id":"anchor-platform/resources/patch-transactions","label":"Update Transactions Info","className":"api-method patch"},{"type":"doc","id":"anchor-platform/resources/get-transactions","label":"Retrieve a List of Transactions","className":"api-method get"},{"type":"doc","id":"anchor-platform/resources/get-transaction","label":"Retrieve a Transaction","className":"api-method get"}]},{"type":"category","label":"SEP-24","link":{"type":"generated-index","title":"SEP-24","slug":"/category/anchor-platform/resources/sep-24"},"items":[{"type":"doc","id":"anchor-platform/resources/patch-transactions","label":"Update Transactions Info","className":"api-method patch"},{"type":"doc","id":"anchor-platform/resources/get-transactions","label":"Retrieve a List of Transactions","className":"api-method get"},{"type":"doc","id":"anchor-platform/resources/get-transaction","label":"Retrieve a Transaction","className":"api-method get"}]},{"type":"category","label":"SEP-31","link":{"type":"generated-index","title":"SEP-31","slug":"/category/anchor-platform/resources/sep-31"},"items":[{"type":"doc","id":"anchor-platform/resources/patch-transactions","label":"Update Transactions Info","className":"api-method patch"},{"type":"doc","id":"anchor-platform/resources/get-transactions","label":"Retrieve a List of Transactions","className":"api-method get"},{"type":"doc","id":"anchor-platform/resources/get-transaction","label":"Retrieve a Transaction","className":"api-method get"}]}];
+module.exports = [{"type":"doc","id":"anchor-platform/resources/platform-api"},{"type":"category","label":"Transactions","link":{"type":"generated-index","title":"Transactions","slug":"/category/anchor-platform/resources/transactions"},"items":[{"type":"doc","id":"anchor-platform/resources/get-transactions","label":"Retrieve a List of Transactions","className":"api-method get"},{"type":"doc","id":"anchor-platform/resources/get-transaction","label":"Retrieve a Transaction","className":"api-method get"}]},{"type":"category","label":"SEP-24","link":{"type":"generated-index","title":"SEP-24","slug":"/category/anchor-platform/resources/sep-24"},"items":[{"type":"doc","id":"anchor-platform/resources/get-transactions","label":"Retrieve a List of Transactions","className":"api-method get"},{"type":"doc","id":"anchor-platform/resources/get-transaction","label":"Retrieve a Transaction","className":"api-method get"}]},{"type":"category","label":"SEP-31","link":{"type":"generated-index","title":"SEP-31","slug":"/category/anchor-platform/resources/sep-31"},"items":[{"type":"doc","id":"anchor-platform/resources/get-transactions","label":"Retrieve a List of Transactions","className":"api-method get"},{"type":"doc","id":"anchor-platform/resources/get-transaction","label":"Retrieve a Transaction","className":"api-method get"}]}];
