# openapi/anchor-platform/Platform API.yml
@@ -9,46 +9,6 @@ tags:
     description: "Firm quotes provided to client applications via SEP APIs"
 paths:
   /transactions:
-    patch:
-      tags:
-        - "Transactions"
-        - SEP-24
-        - SEP-31
-      summary: Update Transactions Info
-      operationId: patchTransactions
-      description:
-        Accepts one or more objects containing updated information on transactions. Note that requests containing
-        invalid data for any transaction will result in a 400 Bad Request and no transactions will be updated. 
-        Importantly, this operation is NOT atomic. If one update fails, all previous updates would be applied, 
-        all subsequent updates would be discarded, and an error would be raised.
-      responses:
-        '200':
-          description: Transaction(s) updated.
-          content:
-            application/json:
-              schema:
-                oneOf:
-                  - $ref: './schemas.yml#/components/schemas/TransactionListSEP24'
-                  - $ref: './schemas.yml#/components/schemas/TransactionListSEP31'
-        '400':
-          description: 'Invalid request body. The error returned pertains to the transaction first determined to be invalid.'
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-                  id:
-                    type: string
-                    description: The `id` of the transaction first determined to be invalid.
-      requestBody:
-        content:
-          application/json:
-            schema:
-              oneOf:
-                - $ref: './schemas.yml#/components/schemas/PatchTransactionSEP24'
-                - $ref: './schemas.yml#/components/schemas/PatchTransactionSEP31'
     get:
       tags:
         - "Transactions"
